api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
        - name: weather-api-container
          imagePullPolicy: IfNotPresent
          image: weather-api:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
spec:
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
