weather-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-page-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: weather-api-service
                port:
                  number: 4000
